Added popup, added flashcard and buttons, and added permissions to manifest.json
I added a css animated flashcard, and linked that to the data stored in storage. I created a popup that allows access to the practice webpage. I also added buttons intended for spaced repetition

--- a/practice.html
+++ b/practice.html
@@ -1,10 +1,21 @@
 <!DOCTYPE HTML>
 <html>
     <head>
-        
+        <link rel="stylesheet" type="text/css" href="practiceStyle.css">
     </head>
     <body>
-
+        <div class="scene">
+            <div class="card">
+                <div id=front class="card__face card__face--front">front</div>
+                <div id=back class="card__face card__face--back">back</div>
+            </div>
+        </div>
+        <div id=buttons>
+            <button class=replyButtons id=b1>Again</button>
+            <button class=replyButtons id=b2>Hard</button>
+            <button class=replyButtons id=b3>Medium</button>
+            <button class=replyButtons id=b4>Easy</button>
+        </div>
     </body>
     <script src="practice.js"></script>
 </html>
