I added the base to a slide in settings bar

--- a/practice.html
+++ b/practice.html
@@ -2,8 +2,14 @@
 <html>
     <head>
         <link rel="stylesheet" type="text/css" href="practiceStyle.css">
+        <script src=button.js></script>
     </head>
     <body>
+        <img id=settingsButton src="images/settingsButton.png"> </img>
+        <div id=settingsBar>
+            <p>hi</p>
+            <button id=save>Save</button>
+        </div>
         <div class="scene">
             <div class="card">
                 <div id=front class="card__face card__face--front">front</div>
