--- a/practice.html
+++ b/practice.html
@@ -2,24 +2,27 @@
 <html>
     <head>
         <link rel="stylesheet" type="text/css" href="practiceStyle.css">
+        <link rel="stylesheet" type="text/css" href="buttonStyle.css">
     </head>
     <body>
         <img id=settingsButton src="images/settingsButton.png"> </img>
         <div id=settingsBar>
-            <p>hi</p>
-            <button id=save>Save</button>
+            <p><button class='button' id='clear'>Empty Word Bank</button></p>
+                <br>
+            <button id='save' class='blue button'>Save</button>
         </div>
+        <br>
         <div class="scene">
             <div class="card">
                 <div id=front class="card__face card__face--front">front</div>
                 <div id=back class="card__face card__face--back">back</div>
             </div>
         </div>
-        <div id=buttons>
-            <button class=replyButtons id=b1>Again</button>
-            <button class=replyButtons id=b2>Hard</button>
-            <button class=replyButtons id=b3>Medium</button>
-            <button class=replyButtons id=b4>Easy</button>
+        <div id = buttons>
+            <button class = 'replyButtons button' id=b1>Again</button>
+            <button class = 'replyButtons button' id=b2>Hard</button>
+            <button class = 'replyButtons button' id=b3>Medium</button>
+            <button class = 'replyButtons button' id=b4>Easy</button>
         </div>
     </body>
     <script src="practice.js"></script>
